--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,7 +2,8 @@
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url('../img/header-bg.jpg');
+  //background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/ajk-bg/ajk-bg-1.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
