--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,3 +15,9 @@ $gray-900: #212529 !default;
 $black: #000 !default;
 
 $primary: #fed136 !default;
+
+// New colors for AJK
+$orange-ajk: #e59a47 !default;
+$yellow-ajk: #f9ed69 !default;
+$red-bordeau-ajk: #a40a3c !default;
+$violet-ajk: #6a2c70 !default;
