--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,6 +1,6 @@
 // Styling for the navbar
 #mainNav {
-  background-color: $gray-900;
+  background-color: $red-bordeau-ajk;
   .navbar-toggler {
     font-size: 12px;
     right: 0;
@@ -8,31 +8,41 @@
     text-transform: uppercase;
     color: white;
     border: 0;
-    background-color: $primary;
+    background-color: $orange-ajk;
     @include heading-font;
   }
   .navbar-brand {
-    color: $primary;
+    color: $orange-ajk;
     @include script-font;
     &.active,
     &:active,
     &:focus,
     &:hover {
-      color: darken($primary, 10%);
+      color: darken($yellow-ajk, 10%);
+    }
+
+    &.logo-ajk {
+      text-indent: -9999px;
+      width: 80px;
+      height: 80px;
+      background: url('../img/logos/logo-final-ajk.svg') no-repeat top left;
+      background-size: contain;
     }
   }
   .navbar-nav {
+    @media(max-width: 767px) {
+      margin-top: 1em;
+    }
     .nav-item {
       .nav-link {
         font-size: 90%;
-        font-weight: 400;
-        padding: 0.75em 0;
+        font-weight: 700;
         letter-spacing: 1px;
         color: white;
         @include heading-font;
         &.active,
         &:hover {
-          color: $primary;
+          color: $yellow-ajk;
         }
       }
     }
@@ -48,25 +58,61 @@
     border: none;
     background-color: transparent;
     .navbar-brand {
-      font-size: 1.75em;
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s;
+      &.logo-ajk {
+        width: 150px;
+        height: 150px;
+      }
     }
     .navbar-nav {
       .nav-item {
         .nav-link {
+          color:$gray-800;
           padding: 1.1em 1em !important;
         }
       }
     }
     &.navbar-shrink {
-      padding-top: 0;
-      padding-bottom: 0;
-      background-color: $gray-900;
+      padding: .5em;
+      background-color: $red-bordeau-ajk;
       .navbar-brand {
-        font-size: 1.25em;
-        padding: 12px 0;
+        &.logo-ajk {
+          width: 60px;
+          height: 60px;
+        }
+      }
+    }
+  }
+}
+
+@media(min-width:1024px) {
+  #mainNav {
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          font-size: 70%;
+        }
+      }
+    }
+    &.navbar-shrink {
+      .navbar-nav {
+        .nav-item {
+          .nav-link {
+            color: $white;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media(min-width:1200px) {
+  #mainNav {
+    .navbar-nav {
+      .nav-item {
+        .nav-link { font-size: 85%; }
       }
     }
   }
