--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,5 +19,19 @@ $primary: #fed136 !default;
 // New colors for AJK
 $orange-ajk: #e59a47 !default;
 $yellow-ajk: #f9ed69 !default;
-$red-bordeau-ajk: #a40a3c !default;
-$violet-ajk: #6a2c70 !default;
+$black-ajk: #393939;
+$green-ajk: #d2ebcd;
+$beige-ajk: #fffcef;
+
+// Responsive breakpoint
+$responsive: true;
+$mobile: 320px;
+$mobile-landscape: 480px;
+$tablet: 768px;
+$tablet-desktop: 992px;
+$desktop: 1024px;
+$desktop-wide: 1200px;
+// Responsive max breakpoint
+$mobile-end: $tablet - 1px;
+$tablet-end: $desktop - 1px;
+$desktop-end: $desktop-wide - 1px;
