--- a/scss/_timeline.scss
+++ b/scss/_timeline.scss
@@ -55,7 +55,7 @@
       color: white;
       border: 7px solid $gray-200;
       border-radius: 100%;
-      background-color: $primary;
+      background-color: $orange-ajk;
       h4 {
         font-size: 10px;
         line-height: 14px;
@@ -86,7 +86,7 @@
   .timeline-heading {
     h4 {
       margin-top: 0;
-      color: inherit;
+      color: $green-ajk;
       &.subheading {
         text-transform: none;
       }
