--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -3,6 +3,8 @@
 @import "mixins.scss";
 // Global CSS
 @import "global.scss";
+@import "useful.scss";
+@import "usefulbreakpoint.scss";
 // Components
 @import "navbar.scss";
 @import "masthead.scss";
