--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,8 +20,9 @@ $primary: #fed136 !default;
 $orange-ajk: #e59a47 !default;
 $yellow-ajk: #f9ed69 !default;
 $black-ajk: #393939;
-$green-ajk: #d2ebcd;
+$green-ajk: #d0ef84;
 $beige-ajk: #fffcef;
+$blue-ajk: #52bad5;
 
 // Responsive breakpoint
 $responsive: true;
