--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -12,5 +12,6 @@
 @import "portfolio.scss";
 @import "timeline.scss";
 @import "team.scss";
+@import "project.scss";
 @import "contact.scss";
 @import "footer.scss";
