--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -6,6 +6,8 @@
 @import "useful.scss";
 @import "usefulbreakpoint.scss";
 // Components
+@import "slick.scss";
+@import "slick-theme";
 @import "navbar.scss";
 @import "masthead.scss";
 @import "services.scss";
