--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -84,8 +84,11 @@
     padding: 100px 0;
     text-align: center;
     h2 {
-      font-size: 3em;
+      font-size: 2em;
       margin-bottom: 15px;
+      @include mediaQuery(tablet) {
+        font-size: 3em;
+      }
     }
     p {
       margin-bottom: 30px;
