--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -11,3 +11,10 @@
     text-align: left;
   }
 }
+
+.partenary-section {
+  h4 { 
+    font-size: 1.3em;
+    font-family: 'Caviar Dreams', Arial, Helvetica, sans-serif;
+   }
+}
