--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,11 +2,7 @@
 header.masthead {
   text-align: center;
   color: white;
-  //background-image: url('../img/header-bg.jpg');
-  background-image: url('../img/ajk-bg/ajk-bg-1.jpg');
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
+  background: url('../img/ajk-bg/ajk-bg-5.png') no-repeat scroll center center;
   @include background-cover;
   .intro-text {
     padding-top: 150px;
@@ -19,11 +15,20 @@ header.masthead {
       @include serif-font;
     }
     .intro-heading {
-      font-size: 50px;
+      font-size: 40px;
       font-weight: 700;
       line-height: 50px;
       margin-bottom: 25px;
-      @include heading-font;
+      // @include heading-font;
+      @include mediaQuery(desktop-wide) {
+        font-size: 50px;
+      }
+    }
+    h1 {
+      font-size: 17px;
+      font-family: 'Caviar Dreams', 'Roboto Slab', Arial;
+      margin-bottom: 25px;
+      color: $beige-ajk;
     }
   }
 }
@@ -31,7 +36,7 @@ header.masthead {
 @include mediaQuery(tablet) {
   header.masthead {
     .intro-text {
-      padding-top: 300px;
+      padding-top: 230px;
       padding-bottom: 200px;
       .intro-lead-in {
         font-size: 40px;
@@ -44,8 +49,14 @@ header.masthead {
         font-size: 65px;
         font-weight: 700;
         line-height: 75px;
+        // @include heading-font;
+        font-family: 'Caviar Dreams', 'Roboto Slab', Arial;
+      }
+      h1 {
+        font-size: 25px;
+        font-family: 'Caviar Dreams','Roboto Slab', Arial;
         margin-bottom: 50px;
-        @include heading-font;
+        color: $black-ajk;
       }
     }
   }
