--- a/scss/_slick-theme.scss
+++ b/scss/_slick-theme.scss
@@ -9,7 +9,7 @@
 
 $slick-font-path: "../fonts/" !default;
 $slick-font-family: "slick" !default;
-$slick-loader-path: "./" !default;
+$slick-loader-path: "../" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
@@ -64,8 +64,8 @@ $slick-opacity-not-active: 0.25 !default;
 .slick-next {
     position: absolute;
     display: block;
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     line-height: 0px;
     font-size: 0px;
     cursor: pointer;
@@ -91,7 +91,7 @@ $slick-opacity-not-active: 0.25 !default;
     }
     &:before {
         font-family: $slick-font-family;
-        font-size: 20px;
+        font-size: 30px;
         line-height: 1;
         color: $slick-arrow-color;
         opacity: $slick-opacity-default;
@@ -101,29 +101,33 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 .slick-prev {
-    left: -25px;
+    left: -35px;
     [dir="rtl"] & {
         left: auto;
         right: -25px;
     }
     &:before {
         content: $slick-prev-character;
+        color: $orange-ajk;
         [dir="rtl"] & {
             content: $slick-next-character;
+            color: $orange-ajk;
         }
     }
 }
 
 .slick-next {
-    right: -25px;
+    right: -35px;
     [dir="rtl"] & {
         left: -25px;
         right: auto;
     }
     &:before {
         content: $slick-next-character;
+        color: $orange-ajk;
         [dir="rtl"] & {
             content: $slick-prev-character;
+            color: $orange-ajk;
         }
     }
 }
@@ -155,8 +159,8 @@ $slick-opacity-not-active: 0.25 !default;
             border: 0;
             background: transparent;
             display: block;
-            height: 20px;
-            width: 20px;
+            height: 30px;
+            width: 30px;
             outline: none;
             line-height: 0px;
             font-size: 0px;
@@ -174,8 +178,8 @@ $slick-opacity-not-active: 0.25 !default;
                 top: 0;
                 left: 0;
                 content: $slick-dot-character;
-                width: 20px;
-                height: 20px;
+                width: 30px;
+                height: 30px;
                 font-family: $slick-font-family;
                 font-size: $slick-dot-size;
                 line-height: 20px;
